--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -516,9 +516,16 @@ a.hoverline:hover {
 }
 
 .card.medium .card-image {
+  opacity: 1;
   height: 75%;
-  width:
+  transition: 0.8s ease;
+  backface-visibility: hidden;
 }
+
+.card.medium:hover {
+  opacity: 0.7;
+}
+
 
 .card-action a.btn-floating {
   margin-bottom: 0;
@@ -540,6 +547,7 @@ a.hoverline:hover {
 #experience .col.s12.m2 {
   text-align: center;
 }
+
 
 .fa-external-link:before {
   left: 3px;
